# quant-data-pipeline

./: .gitignore  CONTEXT.md  README.md  pyproject.toml  requirements.txt
.github/workflows/: check-kaggle-visibility.yml  funding-rate-to-kaggle.yml  inspect-funding-rate.yml  lint-pipelines.yml  list-kaggle-datasets.yml  merge-parquet.yml  publish-kaggle-quant-data.yml  quant-data-pipeline.yml  s3-to-kaggle.yml  smoke-test-outlier.yml
scripts/: check_binance_network.py  download_binance_vision.py  funding_rate_to_kaggle.py  kaggle_publish.py  merge_parquet.py  outlier_detection.py  s3_client.py  s3_to_kaggle.py
