[project]
name = "quant-data-pipeline"
version = "0.1.0"
description = "Merge MinIO parquet and publish Binance fundingRate to Kaggle"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "duckdb>=1.1.0",
    "boto3>=1.34.0",
    "kaggle>=1.6.0",
    "httpx>=0.27.0",
    "pandas>=2.2.0",
    "pyarrow>=15.0.0",
    "tenacity>=8.2.0",
]

[project.scripts]
funding-rate-to-kaggle = "funding_rate_to_kaggle:main"
check-binance-network = "check_binance_network:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = [
    "funding_rate_to_kaggle",
    "check_binance_network",
    "kaggle_publish",
    "merge_parquet",
    "s3_to_kaggle",
    "s3_client",
]

[tool.setuptools.package-dir]
"" = "scripts"

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true
